--- a/src/app/funds/balance/refill-money/refill-money.component.html
+++ b/src/app/funds/balance/refill-money/refill-money.component.html
@@ -63,6 +63,7 @@
       <app-refill-step-two
       *ngIf="step === 2"
       [choosedName]="stepTwoName"
+      [refillData]="optionData.balance"
       ></app-refill-step-two>
 
     </div>
