--- a/src/app/funds/balance/send-money/send-step-one/send-step-one.component.html
+++ b/src/app/funds/balance/send-money/send-step-one/send-step-one.component.html
@@ -4,12 +4,15 @@
 </div>
 <button class="btn btn--center btn--empty-blue"
         (click)="onChooseSend(CRYPTO_WITHDRAWAL)"
->Crypto withdrawal</button>
+>Crypto withdrawal
+</button>
 
 <button class="btn btn--center btn--empty-blue"
         (click)="onChooseSend(FIAT_WITHDRAWAL)"
->Fiat withdrawal</button>
+>Fiat withdrawal
+</button>
 
 <button class="btn btn--center btn--empty-blue"
         (click)="onChooseSend(INNER_TRANSFER)"
->Inner transfer</button>
+>Inner transfer
+</button>
