--- a/src/app/funds/balance/send-money/send-step-two/send-step-two.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-step-two.component.html
@@ -1,9 +1,10 @@
 <app-send-crypto
-*ngIf="choosedName === CRYPTO_WITHDRAWAL"
+  [balanceData]="balanceData"
+  *ngIf="choosedName === CRYPTO_WITHDRAWAL"
 ></app-send-crypto>
 <app-send-fiat
-*ngIf="choosedName === FIAT_WITHDRAWAL"
+  *ngIf="choosedName === FIAT_WITHDRAWAL"
 ></app-send-fiat>
 <app-send-inner-transfer
-*ngIf="choosedName === INNER_TRANSFER"
+  *ngIf="choosedName === INNER_TRANSFER"
 ></app-send-inner-transfer>
