--- a/src/app/funds/balance/send-money/send-money.component.html
+++ b/src/app/funds/balance/send-money/send-money.component.html
@@ -3,7 +3,7 @@
     <!-- btn modal close -->
     <div class="modal__controls modal__controls--top">
       <a class="modal__button modal__button--close"
-      (click)="onCloseSendMoneyPopup()">
+         (click)="onCloseSendMoneyPopup()">
         <span>close</span>
         <img class="modal__button-icon" src="../../../assets/img/close.svg">
       </a>
@@ -11,7 +11,8 @@
     <!-- modal header start -->
     <div class="modal__header-mob">
       <div class="steps__counter steps__counter--mob">step
-        <span class="steps__counter-val">{{step}}</span>/4</div>
+        <span class="steps__counter-val">{{step}}</span>/4
+      </div>
       <div class="modal__header-mob-controls">
         <!--<a class="modal__control-mob" href="#">-->
         <!--<img class="modal__control-icon" src="../../../assets/img/minimize-mob-blue.svg">-->
@@ -25,7 +26,7 @@
     <div class="modal__header">
       <ul class="steps">
         <li class="steps__item"
-        [ngClass]="{'steps__item--current': step === 1}"
+            [ngClass]="{'steps__item--current': step === 1}"
         >
           <a class="steps__link">
             <span class="steps__number  steps__number--valid">1</span>
@@ -34,7 +35,7 @@
           </a>
         </li>
         <li class="steps__item" *ngIf="step >= 2"
-        [ngClass]="{'steps__item--current': step === 2}"
+            [ngClass]="{'steps__item--current': step === 2}"
         >
           <a class="steps__link">
             <span class="steps__number steps__number--valid">2</span>
@@ -43,7 +44,7 @@
           </a>
         </li>
         <li class="steps__item" *ngIf="step >= 3"
-        [ngClass]="{'steps__item--current': step === 3}"
+            [ngClass]="{'steps__item--current': step === 3}"
         >
           <a class="steps__link">
             <span class="steps__number steps__number--valid">3</span>
@@ -53,7 +54,7 @@
         </li>
         <li class="steps__item "
             *ngIf="step === 4"
-        [ngClass]="{'steps__item--current': step >= 4}"
+            [ngClass]="{'steps__item--current': step >= 4}"
         >
           <a class="steps__link">
             <span class="steps__number steps__number--current">4</span>
@@ -74,6 +75,7 @@
       <app-send-step-two
         *ngIf="step === 2"
         [choosedName]="stepTwoName"
+        [balanceData]="optionData.balance"
       ></app-send-step-two>
 
       <app-send-step-three
@@ -83,11 +85,10 @@
       ></app-send-step-three>
 
       <app-send-successful
-      *ngIf="step === 4"
-      [data]="stepFourData"
-      (closeMe)="onCloseSendMoneyPopup()"
-      >
-      </app-send-successful>
+        *ngIf="step === 4"
+        [data]="stepFourData"
+        (closeMe)="onCloseSendMoneyPopup()"
+      ></app-send-successful>
 
     </div>
   </div>
