--- a/src/app/funds/balance/send-money/send-step-three/send-tfa/send-tfa.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/send-tfa/send-tfa.component.html
@@ -21,17 +21,17 @@
 <div *ngIf="isSentPin">
   <div class="subtitle send__subtitle">Put the pincode from your email</div>
   <form [formGroup]="form">
-  <div class="wrap-input send__wrap-input"
-       [ngClass]="{'wrap-input--error': !form.valid && form.controls['pin'].touched}">
-    <input class="wrap-input__input" name="pin" formControlName="pin">
-    <label class="wrap-input__label">Pincode</label>
-    <div class="wrap-input__line"></div>
-    <!--Input error section starts-->
-    <span class="wrap-input__message" *ngIf="!form.valid && form.controls['pin'].touched">Invalid code</span>
-    <span class="wrap-input__message">{{message}}</span>
-    <!--<span class="wrap-input__message">Invalid code</span>-->
-    <!--Input error section ends-->
-  </div>
+    <div class="wrap-input send__wrap-input"
+         [ngClass]="{'wrap-input--error': !form.valid && form.controls['pin'].touched}">
+      <input class="wrap-input__input" name="pin" formControlName="pin">
+      <label class="wrap-input__label">Pincode</label>
+      <div class="wrap-input__line"></div>
+      <!--Input error section starts-->
+      <span class="wrap-input__message" *ngIf="!form.valid && form.controls['pin'].touched">Invalid code</span>
+      <span class="wrap-input__message">{{message}}</span>
+      <!--<span class="wrap-input__message">Invalid code</span>-->
+      <!--Input error section ends-->
+    </div>
   </form>
 </div>
 <!--pin code from email end-->
@@ -40,4 +40,5 @@
         'btn--empty-blue': !form.valid  && !form.controls['pin'].touched,
         'btn--error': !form.valid && form.controls['pin'].touched
         }"
-        (click)="onSubmit()">Submit</button>
+        (click)="onSubmit()">Submit
+</button>
