--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
@@ -1,130 +1,142 @@
 <div class="title send__title">Make Crypto Withdrawal in <span>{{activeCrypto ? activeCrypto.name : ''}}</span></div>
 <div class="formWraper" *ngIf="isEnterData">
-<form [formGroup]="form" >
-<div class="send__inputs-wrap" *ngIf="activeCrypto">
-  <div class="select send__select">
-    <div class="select__value select__value--active" (click)="currencyDropdownToggle()">
-      <!--<img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">-->
-      {{activeCrypto.name}}
-    </div>
-    <div class="select__label">Currency</div>
-    <div class="select__line"></div>
-    <div class="select__triangle"></div>
-    <!--add select__list-searching--open for looking open state-->
-    <div class="select__list-searching" *ngIf="openCurrencyDropdown">
-      <div class="select__search">
-        <input class="select__search-input" type="text" placeholder="Search" (input)="searchCoin($event)">
-        <div class="select__search-icon">
-          <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z"/>
-          </svg>
+  <form [formGroup]="form">
+    <div class="send__inputs-wrap" *ngIf="activeCrypto">
+      <div class="select send__select">
+        <div class="select__value select__value--active" (click)="currencyDropdownToggle()">
+          <!--<img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">-->
+          {{activeCrypto.name}}
+        </div>
+        <div class="select__label">Currency</div>
+        <div class="select__line"></div>
+        <div class="select__triangle"></div>
+        <!--add select__list-searching--open for looking open state-->
+        <div class="select__list-searching" *ngIf="openCurrencyDropdown">
+          <div class="select__search">
+            <input class="select__search-input" type="text" placeholder="Search" (input)="searchCoin($event)">
+            <div class="select__search-icon">
+              <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z"/>
+              </svg>
+            </div>
+          </div>
+          <div class="select__list-searching-body">
+
+            <perfect-scrollbar>
+              <ng-container *ngFor="let letter of alphabet">
+                <h6 class="select__searching-items-title">{{letter.toUpperCase()}}</h6>
+                <div class="select__searching-items-wrap">
+                  <div class="select__searching-item" *ngFor="let name of cryptoNames | groupCoin:letter"
+                       (click)="selectCurrency(name)">
+                    <!--<img src="../../assets/img/eth-icon.svg" class="select__list-item-icon">-->
+                    <span>{{name.name}}</span>
+                  </div>
+                </div>
+              </ng-container>
+            </perfect-scrollbar>
+
+          </div>
         </div>
       </div>
-      <div class="select__list-searching-body">
-
-        <perfect-scrollbar>
-          <ng-container *ngFor="let letter of alphabet">
-            <h6 class="select__searching-items-title">{{letter.toUpperCase()}}</h6>
-            <div class="select__searching-items-wrap">
-              <div class="select__searching-item" *ngFor="let name of cryptoNames | groupCoin:letter" (click)="selectCurrency(name)">
-                <!--<img src="../../assets/img/eth-icon.svg" class="select__list-item-icon">-->
-                <span>{{name.name}}</span>
-              </div>
-            </div>
-          </ng-container>
-        </perfect-scrollbar>
-
+      <div class="wrap-input send__wrap-input"
+           [ngClass]="{'wrap-input--error': isSubmited && (isAmountMax || isAmountMin || form.controls['amount'].value === '0')}">
+        <div class="avaliable">Avaliable: <a (click)="balanceClick()" class="link">{{activeBalance}}
+          {{activeCrypto.name}}</a></div>
+        <app-price-input [placeholder]="'Amount'" (customInput)="amountInput($event)" name="amount"
+                         formControlName="amount"></app-price-input>
+        <!--Input error section starts-->
+        <!--<span class="wrap-input__message wrap-input__message&#45;&#45;show"-->
+        <!--*ngIf="!form.controls['amount'].valid && isSubmited">-->
+        <!--Day limit for withdrawal is {{minWithdrawSum}} {{activeCrypto.name}}</span>-->
+        <span class="wrap-input__message wrap-input__message--show"
+              *ngIf="(isAmountMin || form.controls['amount'].value === '0') && isSubmited">
+      Minimum sum for withdrawal {{minWithdrawSum}} {{activeCrypto ? activeCrypto.name : ''}}</span>
+        <span class="wrap-input__message wrap-input__message--show"
+              *ngIf="isAmountMax && isSubmited">
+      Max sum for withdrawal {{activeBalance}}</span>
+        <!--Input error section ends-->
       </div>
     </div>
-  </div>
-  <div class="wrap-input send__wrap-input"
-       [ngClass]="{'wrap-input--error': isSubmited && (isAmountMax || isAmountMin || form.controls['amount'].value === '0')}">
-    <div class="avaliable">Avaliable: <a (click)="balanceClick()" class="link">{{activeBalance}} {{activeCrypto.name}}</a></div>
-    <app-price-input  [placeholder]="'Amount'" (customInput)="amountInput($event)" name="amount" formControlName="amount"></app-price-input>
-    <!--Input error section starts-->
-    <!--<span class="wrap-input__message wrap-input__message&#45;&#45;show"-->
-          <!--*ngIf="!form.controls['amount'].valid && isSubmited">-->
-      <!--Day limit for withdrawal is {{minWithdrawSum}} {{activeCrypto.name}}</span>-->
-    <span class="wrap-input__message wrap-input__message--show"
-          *ngIf="(isAmountMin || form.controls['amount'].value === '0') && isSubmited">
-      Minimum sum for withdrawal {{minWithdrawSum}} {{activeCrypto ? activeCrypto.name : ''}}</span>
-    <span class="wrap-input__message wrap-input__message--show"
-          *ngIf="isAmountMax && isSubmited">
-      Max sum for withdrawal {{activeBalance}}</span>
-    <!--Input error section ends-->
-  </div>
-</div>
-<div class="send__inputs-wrap">
-  <div class="wrap-input  send__wrap-input"
-  [ngClass]="{'wrap-input--error': !form.controls['address'].valid && isSubmited}">
-    <input class="wrap-input__input" name="address" formControlName="address">
-    <label class="wrap-input__label">Address for withdraw money</label>
-    <div class="wrap-input__line"></div>
-    <!--Input error section starts-->
-    <span class="wrap-input__message wrap-input__message--show"
-          *ngIf="!form.controls['address'].valid && isSubmited">
+    <div class="send__inputs-wrap">
+      <div class="wrap-input  send__wrap-input"
+           [ngClass]="{'wrap-input--error': !form.controls['address'].valid && isSubmited}">
+        <input class="wrap-input__input" name="address" formControlName="address">
+        <label class="wrap-input__label">Address for withdraw money</label>
+        <div class="wrap-input__line"></div>
+        <!--Input error section starts-->
+        <span class="wrap-input__message wrap-input__message--show"
+              *ngIf="!form.controls['address'].valid && isSubmited">
       You should enter {{activeCrypto.name}} address for withdrawal</span>
-    <!--Input error section ends-->
+        <!--Input error section ends-->
+      </div>
+      <div class="wrap-input send__wrap-input"
+           *ngIf="isMemo"
+           [ngClass]="{'wrap-input--error': !form.controls['memo'].valid && isSubmited}"
+      >
+        <input class="wrap-input__input" name="memo" formControlName="memo">
+        <label class="wrap-input__label">Memo ID</label>
+        <div class="wrap-input__line"></div>
+        <!--Input error section starts-->
+        <span class="wrap-input__message wrap-input__message--show"
+              *ngIf="!form.controls['memo'].valid && isSubmited"
+        >Enter memo ID</span>
+        <!--Input error section ends-->
+      </div>
+    </div>
+  </form>
+  <div class="send__line"></div>
+  <div class="send__info">
+    <div class="send__info-row">
+      <div class="send__info-title">You want to withdraw:</div>
+      <div class="send__info-value">{{calculateData.amount}} {{activeCrypto ? activeCrypto.name : ''}}</div>
+    </div>
+    <div class="send__info-row">
+      <div class="send__info-title">Exchange comission:</div>
+      <div class="send__info-value">{{calculateData.companyCommissionRate}} = {{calculateData.companyCommissionAmount}}
+        {{activeCrypto ? activeCrypto.name : ''}}
+      </div>
+    </div>
+    <div class="send__info-row">
+      <div class="send__info-title">Merchant comission:</div>
+      <div class="send__info-value">{{calculateData.merchantCommissionRate}} =
+        {{calculateData.merchantCommissionAmount}} {{activeCrypto ? activeCrypto.name : ''}}
+      </div>
+    </div>
+    <div class="send__info-row">
+      <div class="send__info-title">Total comission:</div>
+      <div class="send__info-value">{{calculateData.commission_rates_sum}}% = {{calculateData.totalCommissionAmount}}
+        {{activeCrypto ? activeCrypto.name : ''}}
+      </div>
+    </div>
+    <div class="send__info-row">
+      <div class="send__info-title">Total with comission:</div>
+      <div class="send__info-value">{{calculateData.resultAmount }} {{activeCrypto ? activeCrypto.name : ''}}</div>
+    </div>
   </div>
-  <div class="wrap-input send__wrap-input"
-       *ngIf="isMemo"
-       [ngClass]="{'wrap-input--error': !form.controls['memo'].valid && isSubmited}"
-  >
-    <input class="wrap-input__input" name="memo" formControlName="memo">
-    <label class="wrap-input__label">Memo ID</label>
-    <div class="wrap-input__line"></div>
-    <!--Input error section starts-->
-    <span class="wrap-input__message wrap-input__message--show"
-          *ngIf="!form.controls['memo'].valid && isSubmited"
-    >Enter memo ID</span>
-    <!--Input error section ends-->
-  </div>
-</div>
-</form>
-<div class="send__line"></div>
-<div class="send__info">
-  <div class="send__info-row">
-    <div class="send__info-title">You want to withdraw:</div>
-    <div class="send__info-value">{{calculateData.amount}} {{activeCrypto ? activeCrypto.name : ''}}</div>
-  </div>
-  <div class="send__info-row">
-    <div class="send__info-title">Exchange comission:</div>
-    <div class="send__info-value">{{calculateData.companyCommissionRate}} = {{calculateData.companyCommissionAmount}} {{activeCrypto ? activeCrypto.name : ''}}</div>
-  </div>
-  <div class="send__info-row">
-    <div class="send__info-title">Merchant comission:</div>
-    <div class="send__info-value">{{calculateData.merchantCommissionRate}} = {{calculateData.merchantCommissionAmount}} {{activeCrypto ? activeCrypto.name : ''}}</div>
-  </div>
-  <div class="send__info-row">
-    <div class="send__info-title">Total comission:</div>
-    <div class="send__info-value">{{calculateData.commission_rates_sum}}% = {{calculateData.totalCommissionAmount}} {{activeCrypto ? activeCrypto.name : ''}}</div>
-  </div>
-  <div class="send__info-row">
-    <div class="send__info-title">Total with comission:</div>
-    <div class="send__info-value">{{calculateData.resultAmount }} {{activeCrypto ? activeCrypto.name : ''}}</div>
-  </div>
-</div>
-<button class="btn btn--center  "
-        [ngClass]="{
+  <button class="btn btn--center  "
+          [ngClass]="{
         'btn--empty-blue': !form.valid && !isSubmited,
         'btn--error': (!form.valid || isAmountMin || isAmountMax ) && isSubmited
         }"
-        (click)="onSubmitWithdrawal()"
->Withdraw
-  <span class="value">{{calculateData.resultAmount}}</span>
-  <span> {{activeCrypto ? activeCrypto.name : ''}}</span>
-</button>
-<div class="send__line"></div>
-<div class="note modal__note">
-  <div class="note__title">Please note:</div>
-  <ul class="note__list">
-    <li class="note__list-item">Once you have submitted your withdrawal request, we will send a confirmation email. Please then click on the confirmation link in your email.</li>
-    <li class="note__list-item">After making a withdrawal, you can track its progress in history on funds page.</li>
-    <li class="note__list-item">Do not withdraw directly to a crowdfund or ICO. We will not credit your account with tokens from that sale.
-    </li>
-  </ul>
-</div>
+          (click)="onSubmitWithdrawal()"
+  >Withdraw
+    <span class="value">{{calculateData.resultAmount}}</span>
+    <span> {{activeCrypto ? activeCrypto.name : ''}}</span>
+  </button>
+  <div class="send__line"></div>
+  <div class="note modal__note">
+    <div class="note__title">Please note:</div>
+    <ul class="note__list">
+      <li class="note__list-item">Once you have submitted your withdrawal request, we will send a confirmation email.
+        Please then click on the confirmation link in your email.
+      </li>
+      <li class="note__list-item">After making a withdrawal, you can track its progress in history on funds page.</li>
+      <li class="note__list-item">Do not withdraw directly to a crowdfund or ICO. We will not credit your account with
+        tokens from that sale.
+      </li>
+    </ul>
+  </div>
 </div>
 
 <div *ngIf="!isEnterData" class="captcha-wrapper">
