--- a/src/app/funds/balance/send-money/send-successful/send-successful.component.html
+++ b/src/app/funds/balance/send-money/send-successful/send-successful.component.html
@@ -21,11 +21,11 @@
   <!--send instant-transfer start-->
 
   <div *ngIf="data.operation === TRANSFER_INSTANT">
-  <div class="title send__successful-title" >Funds were sent!</div>
-  <div class="subtitle send__successful-subtitle">
-    You can check the status of completed transfer in the <a routerLink="/transaction-history" class="link">Transaction
-    history</a> table.
-  </div>
+    <div class="title send__successful-title">Funds were sent!</div>
+    <div class="subtitle send__successful-subtitle">
+      You can check the status of completed transfer in the <a routerLink="/transaction-history" class="link">Transaction
+      history</a> table.
+    </div>
   </div>
 
   <!--send instant-transfer end-->
@@ -53,15 +53,16 @@
   <!--send protected code-transfer start-->
 
   <div *ngIf="false">
-  <div class="title send__successful-title">Code was created successfully!</div>
-  <div class="send__code-wrap">
-    <div class="send__code-title">Use this code to get the transfer</div>
-    <div class="send__code">01d098ddce5b467c1987eee435a8457bd7a4e95ad1bc30213e1c6525250527c7</div>
-    <button class="btn btn--small btn--center btn--empty-blue">Copy</button>
-  </div>
-  <div class="subtitle send__successful-subtitle">
-    You can track the progress in Pending requests table on <a routerLink="/transaction-history" class="link">Funds</a> page.
-  </div>
+    <div class="title send__successful-title">Code was created successfully!</div>
+    <div class="send__code-wrap">
+      <div class="send__code-title">Use this code to get the transfer</div>
+      <div class="send__code">01d098ddce5b467c1987eee435a8457bd7a4e95ad1bc30213e1c6525250527c7</div>
+      <button class="btn btn--small btn--center btn--empty-blue">Copy</button>
+    </div>
+    <div class="subtitle send__successful-subtitle">
+      You can track the progress in Pending requests table on <a routerLink="/transaction-history"
+                                                                 class="link">Funds</a> page.
+    </div>
   </div>
 
   <!--send protected code-transfer end-->
