--- a/src/app/funds/balance/balance-mob/balance-mob.component.html
+++ b/src/app/funds/balance/balance-mob/balance-mob.component.html
@@ -26,15 +26,13 @@
       </div>
       <span>Price in</span>
       <div class="dropdown" #dropdown (click)="onToggleDropdown()">
-        <div class="dropdown__btn">USD</div>
-        <ul class="dropdown__list">
-          <li class="dropdown__item">RUB</li>
-          <li class="dropdown__item">EUR</li>
-          <li class="dropdown__item">UAH</li>
+        <div class="dropdown__btn">{{priceIn}}</div>
+        <ul class="dropdown__list" (click)="onSelectCurrency($event)">
+          <li class="dropdown__item" *ngFor="let item of currenciesArr">{{item}}</li>
         </ul>
       </div>
       <label class="toggler">
-        <input type="checkbox" name="togglerZero" [(ngModel)]="hideAllZero" (click)="onToggleAllZero.emit()">
+        <input type="checkbox" name="togglerZero" [(ngModel)]="hideAllZero" (change)="onToggleAllZero.emit()">
         <span class="toggler__indicate"></span>
       </label>
       <span>Show zero</span>
@@ -45,7 +43,7 @@
   <ng-container>
     <!--table-mob start-->
     <!-- <perfect-scrollbar style="max-height: 450px;" #scrollWrapper> -->
-      <table class="table table--mob"  #scrollContainer>
+      <table class="table table--mob">
         <thead class="table__head">
           <tr class="table__head-row">
             <th class="table__cell-head table__cell-head--tal">Currency</th>
@@ -54,18 +52,14 @@
           </tr>
         </thead>
         <tbody 
-          
           class="table__body table__body--none-shadow" 
-          style="max-height: 300px !important; overflow: scroll !important;"
           infiniteScroll
           [infiniteScrollDistance]="2"
           [infiniteScrollThrottle]="50"
-          [infiniteScrollContainer]="scrollContainer.nativeElement"
-          [fromRoot]="false"
           (scrolled)="onLoadMore()"
         >
           <ng-container *ngFor="let item of balances">
-            <tr class="table__row--mob" (click)="onShowMobDetails(true)">
+            <tr class="table__row--mob" (click)="onShowMobDetails(item)">
               <td class="table__cell table__cell--tal">
                 <div class="balance__currency">
                   <div class="balance__currency-icon">
@@ -81,7 +75,8 @@
                 <span>{{item.activeBalance}}</span>
               </td>
               <td class="table__cell table__cell--tar">
-                <div>$ 3750</div>
+                <div *ngIf="priceIn === currencies.BTC">BTC {{item.btcAmount}}</div>
+                <div *ngIf="priceIn === currencies.USD">$ {{item.usdAmount}}</div>
                 <!-- <span class="txt-small txt-red">–0.24%</span> -->
               </td>
               <td class="table__cell table__cell--arr-mob">
@@ -141,7 +136,7 @@
 </div>
 <!--open mob-balance start-->
 <div class="open-mob-balance" *ngIf="currScreen === screen.DETAILS">
-  <div class="open-mob-balance__header" (click)="onShowMobDetails(false)">
+  <div class="open-mob-balance__header" (click)="onSetScreen(screen.MAIN)">
     <svg width="9" height="7" viewBox="0 0 9 7" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path
         d="M3.82596 0.119541C3.60017 -0.0567689 3.25769 -0.0355965 3.06102 0.166823L0.137687 3.17624L0.133319 3.18071C-0.0387293 3.35787 -0.0421708 3.61517 0.110923 3.7948C0.119367 3.80467 0.128289 3.81436 0.137687 3.82376L3.06102 6.83318C3.25769 7.0356 3.60017 7.05677 3.82596 6.88046C4.05175 6.70415 4.07536 6.3971 3.87872 6.19459L1.73329 3.98602H8.45783C8.75727 3.98602 9 3.76841 9 3.49991C9 3.23141 8.75727 3.0138 8.45783 3.0138H1.73348L3.87872 0.805412C4.07536 0.602898 4.05175 0.295851 3.82596 0.119541Z"/>
@@ -165,17 +160,18 @@
             <img src="../../../assets/img/btc-icon.svg">
           </div>
           <div>
-            <span>BTC</span>
-            <span class="balance__currency-name">Bitcoin</span>
+            <span>{{selectedItem.currencyName}}</span>
+            <span class="balance__currency-name">{{selectedItem.currencyDescription}}</span>
           </div>
         </div>
       </td>
       <td class="table__cell table__cell--tal">
-        <span>0.5062367</span>
+        <span>{{selectedItem.activeBalance}}</span>
       </td>
       <td class="table__cell table__cell--tar">
-        <div>$ 3750</div>
-        <span class="txt-small txt-red">–0.24%</span>
+        <div *ngIf="priceIn === currencies.BTC">BTC {{selectedItem.btcAmount}}</div>
+        <div *ngIf="priceIn === currencies.USD">$ {{selectedItem.usdAmount}}</div>
+        <!-- <span class="txt-small txt-red">–0.24%</span> -->
       </td>
     </tr>
     <tr class="table__row--mob">
@@ -194,12 +190,12 @@
   <div class="open-mob-balance__row">
     <div class="open-mob-balance__title">Price</div>
     <div class="open-mob-balance__value">
-      7.101595 / <span class="txt-green">$ 1450</span>
+      BTC {{selectedItem.btcAmount}} / <span class="txt-green">$ {{selectedItem.usdAmount}}</span>
     </div>
   </div>
   <div class="open-mob-balance__row">
     <div class="open-mob-balance__title">Аvailable</div>
-    <div class="open-mob-balance__value">72.101345</div>
+    <div class="open-mob-balance__value">{{selectedItem.activeBalance}}</div>
   </div>
 
   <div>
@@ -209,7 +205,7 @@
       [ngClass]="{'open-mob-balance__row--open': showOnConfirmation}"
     >
       <div class="open-mob-balance__title">On confirmation</div>
-      <div class="open-mob-balance__value">4.96739</div>
+      <div class="open-mob-balance__value">{{selectedItem.onConfirmation}}</div>
       <div class="open-mob-balance__arr">
         <svg width="10" height="6" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M13.7272 1.36396L7.36328 7.72792L0.99932 1.36396" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -261,7 +257,7 @@
       [ngClass]="{'open-mob-balance__row--open': showReserve}"
     >
       <div class="open-mob-balance__title">Reserve</div>
-      <div class="open-mob-balance__value">1.41504</div>
+      <div class="open-mob-balance__value">{{selectedItem.reservedBalance}}</div>
       <div class="open-mob-balance__arr">
         <svg width="10" height="6" viewBox="0 0 15 9" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M13.7272 1.36396L7.36328 7.72792L0.99932 1.36396" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -274,17 +270,17 @@
           <div class="table__details-item-title">
             Orders
           </div>
-          <div class="table__details-item-value">0.76352</div>
+          <div class="table__details-item-value">{{selectedItem.reservedByOrders}}</div>
         </div>
         <div class="table__details-item">
           <div class="table__details-item-title">Withdraw</div>
-          <div class="table__details-item-value">0.76352</div>
+          <div class="table__details-item-value">{{selectedItem.reservedByMerchant}}</div>
         </div>
       </div>
     </div>
   </div>
 
-  <div 
+  <!-- <div 
     class="open-mob-balance__row"
   >
     <div class="open-mob-balance__title">History</div>
@@ -293,10 +289,16 @@
         <path d="M5.24264 0.757359L9.48528 5L5.24264 9.24264" stroke-linecap="round" stroke-linejoin="round"/>
       </svg>
     </div>
-  </div>
+  </div> -->
   <div class="open-mob-balance__btn-wrap">
-    <a class="widget__buy-sell-btn widget__buy-sell-btn--green">Buy BTC</a>
-    <a class="widget__buy-sell-btn widget__buy-sell-btn--red">Sell BTC</a>
+    <a class="widget__buy-sell-btn widget__buy-sell-btn--green"
+      [routerLink]="['/markets/', selectedItem.currencyName + '-' + priceIn]"
+      [queryParams]="{widget: 'trading'}" 
+    >Buy BTC</a>
+    <a class="widget__buy-sell-btn widget__buy-sell-btn--red"
+      [routerLink]="['/markets/' + selectedItem.currencyName + '-' + priceIn]"
+      [queryParams]="{widget: 'trading'}"
+    >Sell BTC</a>
   </div>
 </div>
 <!--open mob-balance end-->
