--- a/src/app/popups/demo-trading-popup/demo-trading-popup.component.html
+++ b/src/app/popups/demo-trading-popup/demo-trading-popup.component.html
@@ -1,11 +1,11 @@
 <div class="overlay">
-  <div class="popup popup-login" style="max-width: 800px">
+  <div class="popup popup-demo">
     <div class="popup__close" (click)="closeMe()"></div>
-    <p>Unfortunately now you are not able to trade on this version of the webside.</p>
-    <p>Now you have an opportunity to test a redesigned demo version go the dashboard. After all the tests are
-      conducted, the updated dashboard will be available for real trading!</p>
-
-
-    <button class="btn popup__btn" (click)="closeMe()">Continue trading</button>
+    <div class="text">
+      <p>Unfortunately now you are not able to trade on this version of the website.</p>
+      <p>Now you have an opportunity to test a redesigned demo version go the dashboard. After all the tests are
+        conducted, the updated dashboard will be available for real trading!</p>
+    </div>
+    <button class="btn btn--active btn--center" (click)="closeMe()">Continue trading</button>
   </div>
 </div>
