--- a/src/assets/scss/pages/_login-registration.scss
+++ b/src/assets/scss/pages/_login-registration.scss
@@ -272,6 +272,9 @@
 .dark-theme {
   .popup {
     background-color: $dark-indigo;
+    &__close {
+      background-image: url("assets/img/close-light-blue.svg");
+    }
     &__title {
       color: #fff;
     }
@@ -307,6 +310,11 @@
 
 @media (min-width: 1200px) {
   .dark-theme {
+    .popup{
+      &__close {
+        background-image: url("assets/img/close.svg");
+      }
+    }
   }
 }
 
