--- a/src/app/funds/balance/balance-table/balance-table.component.scss
+++ b/src/app/funds/balance/balance-table/balance-table.component.scss
@@ -95,3 +95,81 @@
 }
 
 // pagination styles end
+
+::ng-deep .ng-select {
+  .ng-select-container {
+    width: 184px !important;
+    margin: 0 auto !important;
+    height: 45px !important;
+    background-color: transparent !important;
+    border-bottom-right-radius: 0 !important;
+    border-bottom-left-radius: 0 !important;
+    border-color: #94C2FF !important;
+    border-bottom: none !important;
+    overflow: unset !important;
+  }
+  .ng-value-container {
+    height: 100% !important;
+  }
+  .ng-has-value .ng-placeholder{
+    display: block !important;
+  }
+  .ng-placeholder {
+    position: absolute;
+    top: -7px;
+    left: 7px;
+    padding: 0 2px;
+    font-size: 10px;
+    line-height: 12px;
+    z-index: 100;
+    background-color: #191A39;
+    color: #94C2FF !important;
+  }
+  .ng-value{
+    color: #fff !important;
+  }
+  .ng-input {
+    height: 100%;
+    top: 0 !important;
+    input {
+      height: 100%;
+      color: #fff !important;
+      font-size: 14px !important;
+      font-family: inherit;
+    }
+  }
+  .ng-arrow {
+    border-color: #94C2FF transparent transparent !important;
+  }
+  .ng-select-opened > .ng-select-container .ng-arrow {
+    border-color: transparent transparent #94C2FF !important;
+  }
+  .ng-dropdown-panel{
+    border-color: #94C2FF;
+    background-color: #191A39;
+    margin-bottom: 0 !important;
+  }
+  .ng-option{
+    background-color: transparent !important;
+    color: #fff !important;
+    &-marked{
+      background-color: rgba(255,255,255,.1) !important;
+    }
+  }
+  .ng-clear-wrapper{
+    width: 10px !important;
+  }
+  .ng-clear{
+    content: '' !important;
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    margin: 0 auto;
+    font-size: 0 !important;
+    vertical-align: middle;
+    background-image: url("../../../../assets/img/close-light-blue.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+}
