--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -11,11 +11,15 @@
         [Tab]="Tab"
         [currTab]="currTab"
         [hideAllZero]="hideAllZero"
+        [cryptoCurrenciesForChoose]="cryptoCurrenciesForChoose$ | async"
+        [fiatCurrenciesForChoose]="fiatCurrenciesForChoose$ | async"
         (onToggleAllZero)="onToggleAllZero($event)"
-        (onPaginate)="onPageChanged($event)"
+        (onLoadMore)="loadMoreBalancesForMobile($event)"
         (openRefillBalancePopup)="openRefillBalancePopup($event)"
         (openSendMoneyPopup)="openSendMoneyPopup($event)"
         (onSelectTab)="onSelectTab($event)"
+        (filterByCurrencyForMobile)="filterByCurrencyForMobile($event)"
+        (onBuyCurrency)="onBuyCurrency($event)"
       ></app-balance-mob>
       <app-balance-mob 
         *ngSwitchCase="Tab.FIAT"
@@ -26,11 +30,15 @@
         [Tab]="Tab"
         [currTab]="currTab"
         [hideAllZero]="hideAllZero"
+        [cryptoCurrenciesForChoose]="cryptoCurrenciesForChoose$ | async"
+        [fiatCurrenciesForChoose]="fiatCurrenciesForChoose$ | async"
         (onToggleAllZero)="onToggleAllZero($event)"
-        (onPaginate)="onPageChanged($event)"
+        (onLoadMore)="loadMoreBalancesForMobile($event)"
         (openRefillBalancePopup)="openRefillBalancePopup($event)"
         (openSendMoneyPopup)="openSendMoneyPopup($event)"
         (onSelectTab)="onSelectTab($event)"
+        (filterByCurrencyForMobile)="filterByCurrencyForMobile($event)"
+        (onBuyCurrency)="onBuyCurrency($event)"
       ></app-balance-mob>
       <app-pending-request-mob 
         *ngSwitchCase="Tab.PR"
@@ -40,7 +48,7 @@
         [currentPage]="currentPage"  
         [Tab]="Tab"
         [currTab]="currTab"
-        (onPaginate)="onPageChanged($event)"
+        (onLoadMore)="loadMoreBalancesForMobile($event)"
         (openRefillBalancePopup)="openRefillBalancePopup($event)"
         (openSendMoneyPopup)="openSendMoneyPopup($event)"
         (onSelectTab)="onSelectTab($event)"
@@ -89,15 +97,17 @@
     <!--filters start-->
     <!--<form action="">-->
       <div class="balance__filters">
-        <div class="wrap-input wrap-input--with-icon balance__search">
-          <input class="wrap-input__input" type="text" required>
-          <label class="wrap-input__label" for="">Search</label>
-          <div class="wrap-input__icon">
-            <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M15 8C15 11.8662 11.8652 15 8 15C4.13477 15 1 11.8662 1 8C1 4.13379 4.13477 1 8 1C11.8652 1 15 4.13379 15 8ZM13.293 13.999C11.8828 15.2441 10.0293 16 8 16C3.58203 16 0 12.418 0 8C0 3.58203 3.58203 0 8 0C12.418 0 16 3.58203 16 8C16 10.0293 15.2461 11.8818 14 13.292L17.8535 17.1465C17.9141 17.207 17.957 17.2803 17.9805 17.3574C18.0293 17.5273 17.9883 17.7188 17.8535 17.8535C17.6582 18.0488 17.3418 18.0488 17.1465 17.8535L13.293 13.999Z"/>
-            </svg>
-          </div>
+        <div class="wrap-input wrap-input&#45;&#45;with-icon " *ngIf="currTab !== Tab.PR">
+          <ng-select 
+            class="custom"
+            [items]="currTab === Tab.CRYPTO ? (cryptoCurrenciesForChoose$ | async) : (fiatCurrenciesForChoose$ | async)"
+            bindLabel="name"
+            placeholder="Search"
+            bindValue="name"
+            name="currency"
+            [(ngModel)]="currencyForChoose"
+            (ngModelChange)="loadBalances(currTab)"
+          ></ng-select>
           <div class="wrap-input__line"></div>
         </div>
         <div class="tabs balance__tabs">
@@ -169,6 +179,8 @@
         [countOfEntries]="getCountOfEntries() | async"  
         [currentPage]="currentPage"
         (onPaginate)="onPageChanged($event)"
+        (cryptoWithdrawOut)="goToCryptoWithdrawPopup($event)"
+        (cryptoDepositOut)="goToCryptoDepositPopup($event)"
       ></app-balance-table>
       <app-pending-request-table 
         [pendingRequests]="pendingRequests$ | async"
