--- a/src/app/funds/balance/pending-request-mob/pending-request-mob.component.html
+++ b/src/app/funds/balance/pending-request-mob/pending-request-mob.component.html
@@ -10,52 +10,63 @@
         </svg>
       </span>
     </div>
-    <table class="table table--mob">
-      <thead class="table__head">
-      <tr class="table__head-row">
-        <th class="table__cell-head table__cell-head--tal">Date / Type</th>
-        <th class="table__cell-head table__cell-head--tal">Currency</th>
-        <th class="table__cell-head table__cell-head--tar">Amount</th>
-      </tr>
-      </thead>
-      <tbody class="table__body table__body--none-shadow">
-  
-        <ng-container *ngFor="let item of pendingRequests; let i = index" >
-          <tr class="table__row--mob" (click)="onShowDetails(item)">
-            <td class="table__cell table__cell--tal">
-              <div><span class="arr arr--mr4 arr--red"></span><span>Withdraw</span></div>
-              <div class="balance__request-mob-date">
-                <div>{{item.date | dateWrapper | date: 'EEEEEE dd.MM.yyyy'}}</div>
-                <div>{{item.date | dateWrapper | date: 'HH:mm:ss'}}</div>
-              </div>
-            </td>
-            <td class="table__cell table__cell--tal">
-              <div class="balance__currency">
-                <div class="balance__currency-icon">
-                  <img src="../../../assets/img/btc-icon.svg">
+    <div
+      #scrollContainer
+      [ngStyle]="tableScrollStyles"
+      infiniteScroll
+      [infiniteScrollDistance]="2"
+      [infiniteScrollThrottle]="50"
+      [scrollWindow]="false"
+      [horizontal]="false"
+      (scrolled)="onLoadMoreTrigger()"
+    >
+      <table class="table table--mob">
+        <thead class="table__head">
+        <tr class="table__head-row">
+          <th class="table__cell-head table__cell-head--tal">Date / Type</th>
+          <th class="table__cell-head table__cell-head--tal">Currency</th>
+          <th class="table__cell-head table__cell-head--tar">Amount</th>
+        </tr>
+        </thead>
+        <tbody class="table__body table__body--none-shadow">
+    
+          <ng-container *ngFor="let item of pendingRequests; let i = index" >
+            <tr class="table__row--mob" (click)="onShowDetails(item)">
+              <td class="table__cell table__cell--tal">
+                <div><span class="arr arr--mr4 arr--red"></span><span>Withdraw</span></div>
+                <div class="balance__request-mob-date">
+                  <div>{{item.date | dateWrapper | date: 'EEEEEE dd.MM.yyyy'}}</div>
+                  <div>{{item.date | dateWrapper | date: 'HH:mm:ss'}}</div>
                 </div>
-                <div>
-                  <span>{{item.currency}}</span>
+              </td>
+              <td class="table__cell table__cell--tal">
+                <div class="balance__currency">
+                  <div class="balance__currency-icon">
+                    <img src="../../../assets/img/btc-icon.svg">
+                  </div>
+                  <div>
+                    <span>{{item.currency}}</span>
+                  </div>
                 </div>
-              </div>
-            </td>
-            <td class="table__cell table__cell--tar">
-              {{item.amount}}
-            </td>
-            <td class="table__cell table__cell--arr-mob">
-              <svg width="12" height="11" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M8.36396 1.99932L14.7279 8.36328L8.36396 14.7272" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>
-            </td>
-          </tr>
-          <tr>
-            <td colspan="4">
-              <div class="table__row-mob-line"></div>
-            </td>
-          </tr>
-        </ng-container>
-      </tbody>
-    </table>
+              </td>
+              <td class="table__cell table__cell--tar">
+                {{item.amount}}
+              </td>
+              <td class="table__cell table__cell--arr-mob">
+                <svg width="12" height="11" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M8.36396 1.99932L14.7279 8.36328L8.36396 14.7272" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+              </td>
+            </tr>
+            <tr>
+              <td colspan="4">
+                <div class="table__row-mob-line"></div>
+              </td>
+            </tr>
+          </ng-container>
+        </tbody>
+      </table>
+    </div>
   </div>
 </ng-container>
 <!--mob-request end-->
@@ -81,7 +92,7 @@
     <table class="table table--mob">
       <tbody class="table__body table__body--none-shadow">
 
-      <tr class="table__row--mob" (click)="onShowInfo()">
+      <tr class="table__row--mob">
         <td class="table__cell table__cell--tal">
           <div><span class="arr arr--mr4 arr--red"></span><span>Withdraw</span></div>
           <div class="balance__request-mob-date">
@@ -124,8 +135,18 @@
     </div>
     <div class="open-mob-request__btn-wrap">
       <!--<button class="btn">I paid</button>-->
-      <button class="btn btn--error">Rejected</button>
-      <button class="btn btn--empty-blue">Revoke</button>
+      <!-- <button class="btn btn--error" (click)="onShowInfo()">Rejected</button> -->
+      <button class="btn btn--empty-blue" (click)="toggleRevokeModal(true)">Revoke</button>
+      <!-- revoke modal start-->
+      <div class="revoke-request" *ngIf="showRevokeModal">
+        <div class="revoke-request__title">Are you sure you want to revoke this request?</div>
+        <div class="revoke-request__button-wrap">
+          <button class="btn btn--small" (click)="onRevoke()">Yes</button>
+          <button class="btn btn--small" (click)="toggleRevokeModal(false)">No</button>
+        </div>
+        <div class="revoke-request__triangle"></div>
+      </div>
+        <!-- revoke modal end -->
     </div>
   </div>
 </ng-container>
