--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
@@ -11,7 +11,9 @@
         <div class="select__line"></div>
         <div class="select__triangle"></div>
         <!--add select__list--open for looking open state-->
-        <ul class="select__list" *ngIf="openCurrencyDropdown">
+        <ul class="select__list"
+            [ngClass]="{'select__list--open': openCurrencyDropdown}"
+            *ngIf="openCurrencyDropdown">
 
           <li class="select__list-item" *ngFor="let currency of fiatNames" (click)="selectCurrency(currency)">
             <!--<img src="../../assets/img/btc-icon.svg" class="select__list-item-icon">-->
@@ -52,9 +54,11 @@
         <div class="select__line"></div>
         <div class="select__triangle"></div>
         <!--add select__list-searching--open for looking open state-->
-        <div class="select__list-searching" *ngIf="openPaymentSystemDropdown">
+        <div class="select__list-searching"
+             [ngClass]="{'select__list-searching--open': openPaymentSystemDropdown}"
+             *ngIf="openPaymentSystemDropdown">
           <div class="select__search">
-            <input class="select__search-input" type="text" placeholder="Search" (input)="searchMerchant($event)">
+            <input class="select__search-input" type="text" placeholder="Search" (input)="searchMerchant($event)" required>
             <div class="select__search-icon">
               <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
